--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@types/chrome": "^0.0.263",
     "rollup-plugin-copy": "^3.5.0",
-    "solid-js": "^1.8.11",
-    "vite-plugin-copy": "^0.1.6"
+    "solid-js": "^1.8.11"
   }
 }
