--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,5 +13,13 @@
         "http://*/*",
         "https://*/*"
     ],
-    "manifest_version": 3
+    "manifest_version": 3,
+    "icons": {
+        "16":  "icons/icon16.png",
+        "19":  "icons/icon19.png",
+        "32":  "icons/icon32.png",
+        "38":  "icons/icon38.png",
+        "48":  "icons/icon48.png",
+        "128": "icons/icon128.png"
+      }
 }
