--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,14 +28,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Generate Tag
+        id: generate_tag
+        run: echo "RELEASE_TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ env.RELEASE_TAG }}
+          release_name: Release ${{ env.RELEASE_TAG }}
           draft: false
           prerelease: false
 
