--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: List output directory
+        run: ls -l dist
+
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
